--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -20,7 +20,7 @@ services:
       KAFKA_ZOOKEEPER_CONNECT: zookeeper:2181
       KAFKA_INTER_BROKER_LISTENER_NAME: INTERNAL
       KAFKA_LISTENERS: INTERNAL://:9092,OUTSIDE://:9094
-      KAFKA_ADVERTISED_LISTENERS: INTERNAL://kafka:9092,OUTSIDE://host.docker.internal:9094
+      KAFKA_ADVERTISED_LISTENERS: INTERNAL://kafka:9092,OUTSIDE://kafka:9094
       KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: INTERNAL:PLAINTEXT,OUTSIDE:PLAINTEXT
     extra_hosts:
       - "host.docker.internal:172.17.0.1"
@@ -56,7 +56,7 @@ services:
     extra_hosts:
       - "host.docker.internal:172.17.0.1"
     environment:
-      - BOOTSTRAP_SERVERS=host.docker.internal:9094
+      - BOOTSTRAP_SERVERS=kafka:9094
       - MYSQL_HOST=gatewaydb
       - MYSQL_DATABASE=gateway
       - MYSQL_USERNAME=root
